Add 1.20 R2 support and other improvements (#39)
* fix prefix and suffix length

* fix prefix and suffix length

* fix bw #662

* check identifier length

* Add 1_20_R1 Support (#28)

* fix prefix and suffix length (#17)

* Fix length (#18)

* fix prefix and suffix length

* fix prefix and suffix length

* fix team score issue on 1.19 (#19)

* fix prefix and suffix length

* fix prefix and suffix length

* fix bw #662

* Fix for #21 (#23)

* Fix papi not formatting on first join

* fixup! Fix papi not formatting on first join

* clean up

---------

Co-authored-by: Andrei Dascălu <andrew.dascalu@gmail.com>

* Structure rework and added support for 1.19_R3 (#26)

Co-authored-by: ItzCodex <tom183.private@gmail.com>

* fix class visibility (#27)

* Add 1_20_R1 Support

Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>

---------

Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>
Co-authored-by: Andrei Dascălu <andrew.dascalu@gmail.com>
Co-authored-by: MrCeasar <tomkeuper@live.nl>
Co-authored-by: Tom <72739475+Tom18314@users.noreply.github.com>
Co-authored-by: ItzCodex <tom183.private@gmail.com>

* fix first line getting skipped

* fix placeholders being registered after title, fix first line getting skipped

* fix placeholders being registered after title, fix first line getting skipped

* clean up

* clean up (#37)

* Add 1.20 R2 support (#38)

* clean up

* add 1.20 R2 support

---------

Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>
Co-authored-by: J.T. McQuigg <J.T.McQuigg12@gmail.com>
Co-authored-by: MrCeasar <tomkeuper@live.nl>
Co-authored-by: Tom <72739475+Tom18314@users.noreply.github.com>
Co-authored-by: ItzCodex <tom183.private@gmail.com>