@@ -45,20 +45,18 @@ public class SidebarImpl extends WrappedSidebar {
     protected class NarniaSidebarObjective extends ScoreboardObjective implements SidebarObjective {
 
         private SidebarLine displayName;
+        private ChatComponentText displayNameComponent;
         private final int type;
 
         public NarniaSidebarObjective(String name, IScoreboardCriteria criteria, SidebarLine displayName, int type) {
             super(null, name, criteria, new ChatComponentText(name), IScoreboardCriteria.EnumScoreboardHealthDisplay.a);
             this.displayName = displayName;
-            SidebarLine.markHasPlaceholders(this.displayName, getPlaceholders());
             this.type = type;
         }
 
         @Override
         public void setTitle(SidebarLine title) {
             this.displayName = title;
-            SidebarLine.markHasPlaceholders(this.displayName, getPlaceholders());
-            this.sendUpdate();
         }
 
         @Override
@@ -84,17 +82,28 @@ public class SidebarImpl extends WrappedSidebar {
         @Override
         public void sendRemove(Player player) {
             PacketPlayOutScoreboardObjective packetPlayOutScoreboardObjective = new PacketPlayOutScoreboardObjective(this, 1);
-            ((CraftPlayer)player).getHandle().b.sendPacket(packetPlayOutScoreboardObjective);
+            ((CraftPlayer) player).getHandle().b.sendPacket(packetPlayOutScoreboardObjective);
+        }
+
+        @Override
+        public boolean refreshTitle() {
+            String newTitle = displayName.getTrimReplacePlaceholders(
+                    getReceivers().isEmpty() ? null : getReceivers().getFirst(),
+                    32,
+                    getPlaceholders()
+            );
+
+            if (newTitle.equals(displayNameComponent.h())) {
+                return false;
+            }
+
+            this.displayNameComponent = new ChatComponentText(newTitle);
+            return true;
         }
 
         @Override
         public IChatBaseComponent getDisplayName() {
-            String t = parsePlaceholders(displayName);
-
-            if (t.length() > 32) {
-                t = t.substring(0, 32);
-            }
-            return new ChatComponentText(t);
+            return displayNameComponent;
         }
 
 
@@ -117,7 +126,8 @@ public class SidebarImpl extends WrappedSidebar {
     public class NarniaScoreLine extends ScoreboardScore implements ScoreLine, Comparable<ScoreLine> {
 
         private int score;
-        private String prefix = " ", suffix = "";
+        private ChatComponentText prefixComponent = new ChatComponentText("");
+        private ChatComponentText suffixComponent = new ChatComponentText("");
         private final TeamLine team;
         private SidebarLine text;
 
@@ -126,12 +136,6 @@ public class SidebarImpl extends WrappedSidebar {
             this.score = score;
             this.text = text;
             this.team = new TeamLine(color);
-
-
-            SidebarLine.markHasPlaceholders(text, getPlaceholders());
-
-            //noinspection ResultOfMethodCallIgnored
-            setContent(parsePlaceholders(text));
         }
 
         @Override
@@ -201,35 +205,37 @@ public class SidebarImpl extends WrappedSidebar {
         }
 
         @Contract(pure = true)
-        public boolean setContent(@NotNull String content) {
-            if (!getReceivers().isEmpty()) {
-                content = SidebarManager.getInstance().getPapiSupport().replacePlaceholders(getReceivers().get(0), content);
-            }
-            var oldPrefix = this.prefix;
-            var oldSuffix = this.suffix;
+        public boolean setContent(@NotNull SidebarLine line) {
+            String content = line.getTrimReplacePlaceholders(
+                    getReceivers().isEmpty() ? null : getReceivers().getFirst(),
+                    null,
+                    getPlaceholders()
+            );
+            var oldPrefix = this.prefixComponent.h();
+            var oldSuffix = this.suffixComponent.h();
 
             if (content.length() > 32) {
-                this.prefix = content.substring(0, 32);
-                if (this.prefix.charAt(31) == ChatColor.COLOR_CHAR) {
-                    this.prefix = content.substring(0, 31);
+                this.prefixComponent = new ChatComponentText(content.substring(0, 32));
+                if (this.prefixComponent.h().charAt(31) == ChatColor.COLOR_CHAR) {
+                    this.prefixComponent = new ChatComponentText(content.substring(0, 31));
                     setSuffix(content.substring(31));
                 } else {
                     setSuffix(content.substring(32));
                 }
             } else {
-                this.prefix = content;
-                this.suffix = "";
+                this.prefixComponent = new ChatComponentText(content);
+                this.suffixComponent = new ChatComponentText("");
             }
-            return !oldPrefix.equals(this.prefix) || !oldSuffix.equals(this.suffix);
+            return !oldPrefix.equals(this.prefixComponent.h()) || !oldSuffix.equals(this.suffixComponent.h());
         }
 
         public void setSuffix(@NotNull String secondPart) {
             if (secondPart.isEmpty()) {
-                this.suffix = "";
+                this.suffixComponent = new ChatComponentText("");
                 return;
             }
-            secondPart = org.bukkit.ChatColor.getLastColors(this.prefix) + secondPart;
-            this.suffix = secondPart.length() > 32 ? secondPart.substring(0, 32) : secondPart;
+            secondPart = org.bukkit.ChatColor.getLastColors(this.prefixComponent.h()) + secondPart;
+            this.suffixComponent = new ChatComponentText(secondPart.length() > 32 ? secondPart.substring(0, 32) : secondPart);
         }
 
         public void sendUpdateToAllReceivers() {
@@ -270,6 +276,11 @@ public class SidebarImpl extends WrappedSidebar {
             return team.getName().charAt(0) == ChatColor.COLOR_CHAR ? team.getName() : ChatColor.COLOR_CHAR + team.getName();
         }
 
+        @Override
+        public boolean refreshContent() {
+            return setContent(getLine());
+        }
+
         private class TeamLine extends ScoreboardTeam {
 
             public TeamLine(String color) {
@@ -277,9 +288,10 @@ public class SidebarImpl extends WrappedSidebar {
                 getPlayerNameSet().add(color);
             }
 
+            @Contract(value = " -> new", pure = true)
             @Override
-            public IChatBaseComponent getPrefix() {
-                return new ChatComponentText(prefix);
+            public @NotNull IChatBaseComponent getPrefix() {
+                return prefixComponent;
             }
 
             @Override
@@ -290,9 +302,10 @@ public class SidebarImpl extends WrappedSidebar {
             public void setSuffix(@Nullable IChatBaseComponent var0) {
             }
 
+            @Contract(value = " -> new", pure = true)
             @Override
-            public IChatBaseComponent getSuffix() {
-                return new ChatComponentText(suffix);
+            public @NotNull IChatBaseComponent getSuffix() {
+                return suffixComponent;
             }
 
             @Override
@@ -315,9 +328,10 @@ public class SidebarImpl extends WrappedSidebar {
             public void setColor(EnumChatFormat var0) {
             }
 
+            @Contract(value = "_ -> new", pure = true)
             @Override
-            public IChatMutableComponent getFormattedName(IChatBaseComponent var0) {
-                return new ChatComponentText(prefix + var0 + suffix);
+            public @NotNull IChatMutableComponent getFormattedName(IChatBaseComponent var0) {
+                return new ChatComponentText(prefixComponent.h() + var0 + suffixComponent.h());
             }
         }
     }
